lib_LTLIBRARIES = libcombinations.la libdijkstra.la libmajor_element.la \
                  librandom_shuffle.la libsort.la \
                  libtree_traversal.la

libcombinations_la_SOURCES = combinations.cc combinations.h

libdijkstra_la_SOURCES = dijkstra.cc

libmajor_element_la_SOURCES = major_element.cc major_element.h

librandom_shuffle_la_SOURCES = random_shuffle.cc

libsort_la_SOURCES = sort.cc sort.h

libtree_traversal_la_SOURCES = tree_traversal.cc tree_traversal.h tree.h
