lib_LTLIBRARIES = libadd_long.la libcombinations.la libdijkstra.la libfloyd.la \
                  liblist_node.la \
                  libmajor_element.la \
                  librandom_shuffle.la libsort.la \
                  libtree_traversal.la

libadd_long_la_SOURCES = add_long.cc add_long.h

libcombinations_la_SOURCES = combinations.cc combinations.h

libdijkstra_la_SOURCES = dijkstra.cc dijkstra.h

libfloyd_la_SOURCES = floyd.cc floyd.h dijkstra.cc dijkstra.h

liblist_node_la_SOURCES = list_node.cc list_node.h

libmajor_element_la_SOURCES = major_element.cc major_element.h

librandom_shuffle_la_SOURCES = random_shuffle.cc

libsort_la_SOURCES = sort.cc sort.h

libtree_traversal_la_SOURCES = tree_traversal.cc tree_traversal.h tree.h
